<resources>
    <string name="app_name">AlloDocteur</string>
    <string name="remplir_les_champs_suisvants">Remplir les champs suisvants :</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="je_suis_un">Je suis un :</string>
    <string name="votre_nom">Votre nom</string>
    <string name="prenom">Prenom</string>
    <string name="votre_prenom">Votre prenom</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="nom">Nom</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="creer_compte">CREER COMPTE</string>
    <string name="sp_cialit">Spécialité</string>
    <string name="num_ro_d_ordre">Numéro d\'ordre</string>
    <string name="ou">OU</string>
    <string name="se_connecter">SE CONNECTER</string>
    <string name="todo">TODO</string>
</resources>
