<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="org.ndam.android.app.allodocteur.CreerMedecinActivity">

    <TextView
        android:id="@+id/textViewm"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/remplir_les_champs_suisvants"
        android:textAlignment="center"
        android:textStyle="bold"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/nomViewm"
        android:layout_width="42dp"
        android:layout_height="23dp"
        android:layout_below="@+id/textViewm"
        android:layout_toLeftOf="@+id/telViewm"
        android:layout_toStartOf="@+id/telViewm"
        android:text="@string/nom"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="76dp" />

    <EditText
        android:id="@+id/editNomm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nomViewm"
        android:layout_alignBottom="@+id/nomViewm"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="61dp" />

    <TextView
        android:id="@+id/prenomViewm"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nomViewm"
        android:text="@string/prenom"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="130dp" />

    <EditText
        android:id="@+id/editPrenomm"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_alignLeft="@+id/editNomm"
        android:layout_alignStart="@+id/editNomm"
        android:layout_below="@+id/prenomViewm"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/telViewm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText5"
        android:layout_toLeftOf="@+id/editText4"
        android:layout_toStartOf="@+id/editText4"
        android:text="@string/telephone"
        android:textStyle="bold"
        tools:ignore="MissingConstraints,UnknownId"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="192dp" />

    <EditText
        android:id="@+id/editTelm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="184dp" />

    <TextView
        android:id="@+id/emailViewm"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:text="@string/email"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="254dp" />

    <EditText
        android:id="@+id/editEmailm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="244dp" />

    <TextView
        android:id="@+id/mdpViewm"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:text="@string/mot_de_passe"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="407dp" />

    <EditText
        android:id="@+id/editMdpm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="401dp" />

    <Button
        android:id="@+id/enregistrerbtnm"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:text="@string/creer_compte"
        android:textStyle="bold"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="447dp" />

    <TextView
        android:id="@+id/specialiteView"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:text="@string/sp_cialit"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="302dp" />

    <TextView
        android:id="@+id/numordreView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_ro_d_ordre"
        android:textStyle="bold"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="361dp" />

    <EditText
        android:id="@+id/editNumordre"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="354dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="65dp"
        android:layout_height="29dp"
        android:text="@string/ou"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="457dp" />

    <Button
        android:id="@+id/connexionBtn"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:text="@string/se_connecter"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="447dp"
        />

    <EditText
        android:id="@+id/editSpecialite"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="302dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
