<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="org.ndam.android.app.allodocteur.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />



    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="215dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="100dp"
                tools:layout_editor_absoluteY="44dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="135dp"
                tools:layout_editor_absoluteY="128dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background"
                android:text="SE CONNECTER"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="150dp"
                tools:layout_editor_absoluteY="258dp" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="20dp"
                android:text="Email"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="64dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:layout_width="105dp"
                android:layout_height="22dp"
                android:text="Mot de passe"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="152dp"
                tools:ignore="MissingConstraints" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>
